[package]
name = "raw-to-img"
version = "0.2.3"
edition = "2021"
authors = [ "jzbor" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imagepipe = "0.5.0"
rawloader = "0.37.1"
image = "0.24.2"
clap = { version = "3.2.7", features = ["derive"] }
