[package]
name = "raw-to-img"
version = "0.3.3"
edition = "2021"
authors = [ "jzbor" ]
readme = "README.md"
description = "Converts raw image files produced by cameras into regular image files. Also works recursively on whole file trees instead of just a single folder or image."
repository = "https://github.com/jzbor/raw-to-img"
license-file = "LICENSE"
exclude = [ "test-data/" ]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imagepipe = "0.5.0"
rawloader = "0.37.1"
image = { version = "0.25.5", features = ["jpeg", "png", "tiff", "qoi", "rayon"], default-features = false }
clap = { version = "4.3.21", features = ["derive"] }
threadpool = "1.8.1"
